--- a/MiniMix/Base.lproj/Main.storyboard
+++ b/MiniMix/Base.lproj/Main.storyboard
@@ -379,22 +379,6 @@
                                     </mask>
                                 </variation>
                             </scrollView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xbt-AN-QG5">
-                                <rect key="frame" x="0.0" y="20" width="605" height="78"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="78" id="4QA-HC-4SR"/>
-                                </constraints>
-                                <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="g8m-ja-rYJ"/>
-                                    <barButtonItem systemItem="stop" id="Tba-bO-pcN">
-                                        <connections>
-                                            <action selector="exitModal:" destination="768-I3-fXc" id="83H-D1-O8e"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                                <color key="tintColor" red="0.92607909600000005" green="0.99571455269999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="barTintColor" red="0.098039215686274508" green="0.32941176470588235" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
-                            </toolbar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mini Mix" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pir-7m-RK0">
                                 <rect key="frame" x="240" y="28" width="121" height="37"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="31"/>
@@ -407,6 +391,27 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xbt-AN-QG5">
+                                <rect key="frame" x="0.0" y="20" width="605" height="78"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="78" id="4QA-HC-4SR"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="stop" id="EGH-ws-7eh">
+                                        <connections>
+                                            <action selector="exitNoSave" destination="768-I3-fXc" id="TO9-hD-1kS"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="g8m-ja-rYJ"/>
+                                    <barButtonItem systemItem="save" id="Tba-bO-pcN">
+                                        <connections>
+                                            <action selector="exitModal:" destination="768-I3-fXc" id="83H-D1-O8e"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                                <color key="tintColor" red="0.92607909600000005" green="0.99571455269999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="barTintColor" red="0.098039215686274508" green="0.32941176470588235" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -701,7 +706,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TrackCell" rowHeight="136" id="7od-VM-Ld3" customClass="TrackTableViewCell" customModule="MiniMix" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="600" height="136"/>
+                                <rect key="frame" x="0.0" y="122" width="600" height="136"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7od-VM-Ld3" id="UhN-fi-ljB">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="135.5"/>
@@ -861,7 +866,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MasterCell" rowHeight="116" id="0BN-8T-BIS" customClass="MasterTableViewCell" customModule="MiniMix" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="228" width="600" height="116"/>
+                                <rect key="frame" x="0.0" y="258" width="600" height="116"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0BN-8T-BIS" id="lo9-8i-ZPA">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="115.5"/>
